[package]
name = "oc-wasm-cassette"
version = "0.3.0"
authors = ["Christopher Head <chead@chead.ca>"]
edition = "2021"
description = "Provides a convenient entry point wrapper for an OC-Wasm application to use Cassette as an async executor"
repository = "https://gitlab.com/Hawk777/oc-wasm-cassette"
license = "GPL-3.0-only"
keywords = ["minecraft", "oc-wasm", "opencomputers"]
categories = ["games"]

[dependencies.cassette]
version = "^0.2"

[dependencies.oc-wasm-futures]
default-features = false
version = "^0.7"

[dependencies.sync-unsafe-cell]
version = "^0.1"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
