[package]
name = "oc-wasm-opencomputers"
version = "0.11.0"
authors = ["Christopher Head <chead@chead.ca>"]
edition = "2021"
description = "High-level APIs for OpenComputers components"
repository = "https://gitlab.com/Hawk777/oc-wasm-opencomputers"
license = "GPL-3.0-only"
keywords = ["minecraft", "oc-wasm", "opencomputers"]
categories = ["games"]

[dependencies.minicbor]
default-features = false
features = ["alloc", "derive"]
version = "^0.21"

[dependencies.oc-wasm-futures]
default-features = false
version = "^0.12"

[dependencies.oc-wasm-helpers]
version = "^0.12"

[dependencies.oc-wasm-safe]
default-features = false
version = "^0.12"

[features]
default = ["std"]
std = ["oc-wasm-safe/std"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
