[package]
name = "oc-wasm-applied-energistics"
version = "0.12.0"
authors = ["Christopher Head <chead@chead.ca>"]
edition = "2021"
description = "High-level APIs for Applied Energistics"
repository = "https://gitlab.com/Hawk777/oc-wasm-applied-energistics"
license = "GPL-3.0-only"
keywords = ["applied", "energistics", "minecraft", "oc-wasm", "opencomputers"]
categories = ["games"]

[dependencies]
minicbor = { workspace = true }
oc-wasm-futures = { workspace = true }
oc-wasm-helpers = { workspace = true }
oc-wasm-safe = { workspace = true }

[features]
default = ["std"]
std = ["oc-wasm-safe/std"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
