[package]
name = "oc-wasm-applied-energistics"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "High-level APIs for Applied Energistics"
repository = { workspace = true }
license = { workspace = true }
keywords = ["applied", "energistics", "minecraft", "oc-wasm", "opencomputers"]
categories = { workspace = true }

[dependencies]
minicbor = { workspace = true }
oc-wasm-futures = { workspace = true }
oc-wasm-helpers = { workspace = true }
oc-wasm-safe = { workspace = true }

[features]
default = ["std"]
std = ["oc-wasm-safe/std"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
