[package]
name = "oc-wasm-cassette"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Provides a convenient entry point wrapper for an OC-Wasm application to use Cassette as an async executor"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
cassette = { version = "^0.2" }
oc-wasm-futures = { workspace = true }
sync-unsafe-cell = { version = "^0.1" }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
