[package]
name = "oc-wasm-futures"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Futures that allow async/await to be used in OC-Wasm for a more ergonomic experience"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
minicbor = { workspace = true }
oc-wasm-safe = { workspace = true }
ordered-float = { workspace = true }

[features]
default = ["alloc", "proper-waker"]
# Enable this if you want to use a Vec<u8> as your scratch buffer rather than
# using a fixed-size slice or providing your own customer Buffer
# implementation.
alloc = ["minicbor/alloc"]
# Disable this if your executor passes a dummy waker (that doesn’t do anything)
# and always polls every task to get a smaller sleep module.
proper-waker = ["alloc"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
