[package]
name = "oc-wasm-helpers"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Helpers used by multiple OC-Wasm high-level APIs"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
minicbor = { features = ["derive"], workspace = true }
oc-wasm-futures = { workspace = true }
oc-wasm-safe = { workspace = true }

[features]
default = ["alloc"]
alloc = []

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
