[package]
name = "oc-wasm-immersive"
version = "0.12.0"
authors = ["Christopher Head <chead@chead.ca>"]
edition = "2021"
description = "High-level APIs for the Immersive family of machines"
repository = "https://gitlab.com/Hawk777/oc-wasm-immersive"
license = "GPL-3.0-only"
keywords = ["immersive", "minecraft", "oc-wasm", "opencomputers"]
categories = ["games"]

[dependencies]
bounded-integer = { features = ["macro"], version = "^0.5" }
minicbor = { workspace = true }
oc-wasm-futures = { workspace = true }
oc-wasm-helpers = { workspace = true }
oc-wasm-safe = { workspace = true }

[features]
default = ["std"]
alloc = ["minicbor/alloc", "oc-wasm-helpers/alloc"]
std = ["alloc", "bounded-integer/std", "oc-wasm-safe/std"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
