[package]
name = "oc-wasm-immersive"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "High-level APIs for the Immersive family of machines"
repository = { workspace = true }
license = { workspace = true }
keywords = ["immersive", "minecraft", "oc-wasm", "opencomputers"]
categories = { workspace = true }

[dependencies]
bounded-integer = { features = ["macro"], version = "^0.5" }
minicbor = { workspace = true }
oc-wasm-futures = { workspace = true }
oc-wasm-helpers = { workspace = true }
oc-wasm-safe = { workspace = true }

[features]
default = ["std"]
alloc = ["minicbor/alloc", "oc-wasm-helpers/alloc"]
std = ["alloc", "bounded-integer/std", "oc-wasm-safe/std"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
