[package]
name = "oc-wasm-opencomputers"
version = "0.12.0"
authors = ["Christopher Head <chead@chead.ca>"]
edition = "2021"
description = "High-level APIs for OpenComputers components"
repository = "https://gitlab.com/Hawk777/oc-wasm-opencomputers"
license = "GPL-3.0-only"
keywords = ["minecraft", "oc-wasm", "opencomputers"]
categories = ["games"]

[dependencies]
minicbor = { features = ["alloc", "derive"], workspace = true }
oc-wasm-futures = { workspace = true }
oc-wasm-helpers = { features = ["alloc"], workspace = true }
oc-wasm-safe = { workspace = true }

[features]
default = ["std"]
std = ["oc-wasm-safe/std"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
