[package]
name = "oc-wasm-opencomputers"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "High-level APIs for OpenComputers components"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
minicbor = { features = ["alloc", "derive"], workspace = true }
oc-wasm-futures = { workspace = true }
oc-wasm-helpers = { features = ["alloc"], workspace = true }
oc-wasm-safe = { workspace = true }

[features]
default = ["std"]
std = ["oc-wasm-safe/std"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
