[package]
name = "oc-wasm-safe"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Safe but low-level wrappers around the OC-Wasm system call interface"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
minicbor = { workspace = true }
oc-wasm-sys = { workspace = true }
ordered-float = { workspace = true }
uuid = { default-features = false, version = "^1" }

[features]
default = ["panic", "std"]
panic = []
std = []

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
