[package]
name = "oc-wasm-sys"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Raw FFI bindings to the OC-Wasm system call interface"
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
ordered-float = { workspace = true }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
